update fitur kurir

--- a/kurir.html
+++ b/kurir.html
@@ -39,21 +39,23 @@
     <div class="container mt-5">
       <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body">
-          <form>
+          <form action="data_kurir.php" method="post">
             <div class="mb-3">
               <label for="nama" class="form-label">Masukkan Namamu</label>
-              <input type="text" class="form-control" id="nama" aria-describedby="emailHelp" />
+              <input type="text" class="form-control" id="nama" name="nama" aria-describedby="emailHelp" />
             </div>
             <div class="mb-3">
-              <label for="lokasijemput" class="form-label">Mau ambil/beli barang dimana ?</label>
-              <input type="text" class="form-control" id="lokasijemput" />
+              <label for="lokasijemput" class="form-label">Mau Beli/Ambil Barang Dimana ?</label>
+              <input type="text" class="form-control" id="lokasijemput" name="lokasijemput" placeholder="Masukkan dengan alamat tujuanmu, Misal: Toko bahan jajan A" />
             </div>
             <div class="mb-3">
-              <label for="lokasiantar" class="form-label">Mau dianterin kemana ?</label>
-              <input type="text" class="form-control" id="lokasiantar" />
+              <label for="lokasiantar" class="form-label">Mau Dianterin Kemana ?</label>
+              <input type="text" class="form-control" id="lokasiantar" name="lokasiantar" placeholder="Masukkan dengan alamatmu" />
             </div>
             <!-- Tampilkan peta Leaflet disini -->
             <div id="mapid" class="map" style="border-radius: 10px"></div>
+            <input type="hidden" id="latitude" name="latitude" />
+            <input type="hidden" id="longitude" name="longitude" />
             <!-- Tampilkan peta Leaflet disini -->
             <p class="mt-2"><b>Catatan : Jika peta koordinat salah, maka diabaikan saja</b></p>
             <div class="d-grid gap-2">
@@ -63,8 +65,8 @@
               <p id="titikkoordinat"></p>
             </div>
             <div class="mb-3">
-              <label for="" class="form-label">Catatan</label>
-              <textarea class="form-control mb-3" id="exampleComment" rows="5" placeholder="Masukkan catatanmu disini"></textarea>
+              <label for="" class="form-label">Pesanan</label>
+              <textarea class="form-control mb-3" id="exampleComment" name="catatan" rows="5" placeholder="Misal: Belikan/Ambilkan saya Barang A di Lokasi/Toko B"></textarea>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1" />
@@ -73,6 +75,7 @@
             </div>
             <div class="bayar">
               <div class="d-grid gap-2">
+                <input type="hidden" id="totalBayar" name="totalBayar" />
                 <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang <i class="bi bi-arrow-right-circle-fill"></i></button>
               </div>
               <h4 class="mt-3"><b>Total Bayar</b></h4>
@@ -86,67 +89,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        var map = L.map("mapid").setView([-8.5831, 116.116], 13); // Set initial location to Mataram, NTB, Indonesia
-        var marker;
-        var totalBayar = 0;
-
-        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-          maxZoom: 19,
-          attribution: 'Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-        }).addTo(map);
-
-        function onLocationFound(e) {
-          if (marker) {
-            map.removeLayer(marker);
-          }
-          marker = L.marker(e.latlng).addTo(map);
-          var latitude = e.latlng.lat.toFixed(7);
-          var longitude = e.latlng.lng.toFixed(7);
-          document.getElementById("titikkoordinat").textContent = "Latitude: " + latitude + ", Longitude: " + longitude;
-
-          // Tentukan biaya berdasarkan lokasi
-          var mataramBoundary = L.latLngBounds([-8.6085, 116.0264], [-8.5147, 116.1881]);
-          if (mataramBoundary.contains(e.latlng)) {
-            totalBayar = 8000; // Mataram
-          } else {
-            totalBayar = 12000; // Luar Mataram
-          }
-          document.getElementById("bayar").textContent = "Total Bayar: Rp " + totalBayar.toLocaleString();
-        }
-
-        function onLocationError(e) {
-          alert(e.message);
-        }
-
-        document.getElementById("getLocationBtn").addEventListener("click", function () {
-          navigator.geolocation.getCurrentPosition(
-            function (position) {
-              var latlng = L.latLng(position.coords.latitude, position.coords.longitude);
-              map.setView(latlng, 16);
-              if (marker) {
-                map.removeLayer(marker);
-              }
-              marker = L.marker(latlng).addTo(map);
-              document.getElementById("titikkoordinat").textContent = "Latitude: " + position.coords.latitude.toFixed(7) + ", Longitude: " + position.coords.longitude.toFixed(7);
-
-              // Tentukan biaya berdasarkan lokasi
-              var mataramBoundary = L.latLngBounds([-8.6085, 116.0264], [-8.5147, 116.1881]);
-              if (mataramBoundary.contains(latlng)) {
-                totalBayar = 8000; // Mataram
-              } else {
-                totalBayar = 12000; // Luar Mataram
-              }
-              document.getElementById("bayar").textContent = "Total Bayar: Rp " + totalBayar.toLocaleString();
-            },
-            function (error) {
-              alert("Tidak dapat menemukan lokasi: " + error.message);
-            },
-            { enableHighAccuracy: true }
-          );
-        });
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
