--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Jargon -->
     <div class="logo" style="margin-top: 20px">
-      <img src="LogofixZippy.png" alt="" width="250px" style="margin: auto; display: flex" />
+      <img src="swifygo.png" alt="" width="250px" style="margin: auto; display: flex" />
     </div>
     <p class="text-center" style="font-size: 14px"><b>Ojek Online | Food Driver | Kurir | Homecare</b></p>
     <div class="alert alert-warning" role="alert">
@@ -59,7 +59,7 @@
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
           <div class="card-body">
             <h3 class="text-center" style="border-bottom: black 2px solid; padding-bottom: 10px">
-              <b>Membership <span style="color: #ff9933">Zippy</span></b>
+              <b>Membership <span style="color: #ff9933">Swifygo</span></b>
             </h3>
             <p class="text-center">
               Dapatkan keuntungan dari <span style="color: #ff9933"><b> Diskon</b></span> hingga <span style="color: #ff9933"><b>Gratis Ongkir</b></span> dengan membeli membership 🤩
