--- a/ojek-online.html
+++ b/ojek-online.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="logo" style="margin-top: 20px">
-      <img src="LogofixZippy.png" alt="Logo Zippy" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
+      <img src="swifygo.png" alt="Logo Zippy" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
     </div>
     <div class="jargon mt-3" style="margin-left: 20px; margin-right: 20px">
       <h6 class="text-center">Kamu memilih layanan Ojek Online ✨</h6>
