--- a/homecare.html
+++ b/homecare.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ojek Online 🛵</title>
+    <title>Homecare 👏</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Leaflet CSS -->
@@ -30,10 +30,10 @@
   </head>
   <body>
     <div class="logo" style="margin-top: 20px">
-      <img src="LogofixZippy.png" alt="Logo Zippy" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
+      <img src="swifygo.png" alt="Logo Zippy" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
     </div>
     <div class="jargon mt-3" style="margin-left: 20px; margin-right: 20px">
-      <h6 class="text-center">Kamu memilih layanan Ojek Online ✨</h6>
+      <h6 class="text-center">Kamu memilih layanan Homecare ✨</h6>
       <h1 class="text-center">Yuk isi data pesananmu dulu ya</h1>
     </div>
     <div class="container mt-5">
