--- a/homecare.html
+++ b/homecare.html
@@ -39,16 +39,15 @@
     <div class="container mt-5">
       <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body">
-          <form>
+          <form action="data_homecare.php" method="post">
             <div class="mb-3">
               <label for="nama" class="form-label">Masukkan Namamu</label>
-              <input type="text" class="form-control" id="nama" aria-describedby="emailHelp" />
+              <input type="text" class="form-control" id="nama" name="nama" aria-describedby="emailHelp" />
             </div>
             <div class="mb-3">
               <label for="lokasijemput" class="form-label">Masukkan Alamatmu ?</label>
-              <input type="text" class="form-control" id="lokasijemput" />
+              <input type="text" class="form-control" id="lokasijemput" name="lokasijemput" />
             </div>
-
             <!-- Tampilkan peta Leaflet disini -->
             <div id="mapid" class="map" style="border-radius: 10px"></div>
             <!-- Tampilkan peta Leaflet disini -->
@@ -61,7 +60,7 @@
             </div>
             <div class="mb-3">
               <label for="" class="form-label">Catatan</label>
-              <textarea class="form-control mb-3" id="exampleComment" rows="5" placeholder="Masukkan catatanmu disini"></textarea>
+              <textarea class="form-control mb-3" id="exampleComment" name="exampleComment" rows="5" placeholder="Masukkan catatanmu disini"></textarea>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1" />
@@ -84,58 +83,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        var map = L.map("mapid").setView([-8.5831, 116.116], 13); // Set initial location to Mataram, NTB, Indonesia
-        var marker;
-        var totalBayar = 0;
-
-        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-          maxZoom: 19,
-          attribution: 'Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-        }).addTo(map);
-
-        function onLocationFound(e) {
-          if (marker) {
-            map.removeLayer(marker);
-          }
-          marker = L.marker(e.latlng).addTo(map);
-          var latitude = e.latlng.lat.toFixed(7);
-          var longitude = e.latlng.lng.toFixed(7);
-          document.getElementById("titikkoordinat").textContent = "Latitude: " + latitude + ", Longitude: " + longitude;
-        }
-
-        function onLocationError(e) {
-          alert(e.message);
-        }
-
-        document.getElementById("getLocationBtn").addEventListener("click", function () {
-          navigator.geolocation.getCurrentPosition(
-            function (position) {
-              var latlng = L.latLng(position.coords.latitude, position.coords.longitude);
-              map.setView(latlng, 16);
-              if (marker) {
-                map.removeLayer(marker);
-              }
-              marker = L.marker(latlng).addTo(map);
-              document.getElementById("titikkoordinat").textContent = "Latitude: " + position.coords.latitude.toFixed(7) + ", Longitude: " + position.coords.longitude.toFixed(7);
-
-              // Tentukan biaya berdasarkan lokasi
-              var mataramBoundary = L.latLngBounds([-8.6085, 116.0264], [-8.5147, 116.1881]);
-              if (mataramBoundary.contains(latlng)) {
-                totalBayar = 8000; // Mataram
-              } else {
-                totalBayar = 12000; // Luar Mataram
-              }
-              document.getElementById("bayar").textContent = "Total Bayar: Rp " + totalBayar.toLocaleString();
-            },
-            function (error) {
-              alert("Tidak dapat menemukan lokasi: " + error.message);
-            },
-            { enableHighAccuracy: true }
-          );
-        });
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
